--- a/index.html
+++ b/index.html
@@ -1710,7 +1710,7 @@
                 
                 <nav class="nav-links">
                     <a href="#" class="active">الرئيسية</a>
-                    <a href="ad.html">إدارة المنتجات</a>
+                    <a href="https://mostagb-al-store.vercel.app/ad.html">إدارة المنتجات</a>
                     <a href="#">التصنيفات</a>
                     <a href="#">من نحن</a>
                     <a href="#">اتصل بنا</a>
