Update contact location and currency in index.html

--- a/index.html
+++ b/index.html
@@ -2012,7 +2012,7 @@
                         <ul class="footer-links">
                             <li><i class="fas fa-phone" style="margin-left: 8px;"></i>+249 924 299 798</li>
                             <li><i class="fas fa-envelope" style="margin-left: 8px;"></i> info@futurestore.com</li>
-                            <li><i class="fas fa-map-marker-alt" style="margin-left: 8px;"></i> الرياض، المملكة العربية السعودية</li>
+                            <li><i class="fas fa-map-marker-alt" style="margin-left: 8px;"></i> الخرطوم ، السودان</li>
                         </ul>
                     </div>
                 </div>
@@ -2660,7 +2660,7 @@
                                 </div>
                                 
                                 <div class="product-price">
-                                    <span class="current-price">${product.price} ر.س</span>
+                                    <span class="current-price">${product.price} ج.س</span>
                                     ${product.original_price ? `<span class="original-price">${product.original_price} ج.س</span>` : ''}
                                 </div>
                                 
