Update footer contact information and links

--- a/about.html
+++ b/about.html
@@ -802,7 +802,7 @@
                 <div class="footer-column">
                     <h3>خدماتنا</h3>
                     <ul>
-                        <li><a href="#">التسوق عبر الإنترنت</a></li>
+                        <li><a href="index.html">التسوق عبر الإنترنت</a></li>
                         <li><a href="#">التوصيل السريع</a></li>
                         <li><a href="#">الدعم الفني</a></li>
                         <li><a href="#">الضمان والاستبدال</a></li>
@@ -811,8 +811,8 @@
                 <div class="footer-column">
                     <h3>اتصل بنا</h3>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> الرياض، المملكة العربية السعودية</li>
-                        <li><i class="fas fa-phone"></i> 8001234567</li>
+                        <li><i class="fas fa-map-marker-alt"></i> الخرطوم، السودان </li>
+                        <li><i class="fas fa-phone"></i>0924299798</li>
                         <li><i class="fas fa-envelope"></i> info@futurestore.com</li>
                     </ul>
                 </div>
