Change admin login button to redirect to homepage
Updated admin access message and redirect link.

--- a/latest-products.html
+++ b/latest-products.html
@@ -94,14 +94,13 @@
         <div class="warning-icon">⚠️</div>
         <h1>عذرًا</h1>
         <p>هذه الصفحة مخصصة للإدمن فقط. ليس لديك الصلاحيات اللازمة للوصول إلى هذا المحتوى.</p>
-        <p>إذا كنت تملك صلاحية الإدمن، يرجى تسجيل الدخول من خلال الرابط المخصص.</p>
-        <button class="admin-login" onclick="redirectToLogin()">تسجيل دخول الإدمن</button>
+        <button class="admin-login" onclick="redirectToLogin()">العودة الى الرئيسية </button>
     </div>
 
     <script>
         function redirectToLogin() {
             // هنا يمكنك تغيير الرابط ليناسب صفحة تسجيل دخول الإدمن
-            window.location.href = "/admin-login";
+            window.location.href = "index.html";
         }
     </script>
 </body>
