--- a/contact.html
+++ b/contact.html
@@ -440,7 +440,7 @@
                     </div>
                     
                     <div class="social-links">
-                        <a href="#" class="social-link">
+                        <a href="https://www.facebook.com/stihp.en.3" class="social-link">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="#" class="social-link">
@@ -449,7 +449,7 @@
                         <a href="#" class="social-link">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#" class="social-link">
+                        <a href="https://wa.me/message/6TY5HI5QHOQBA1" class="social-link">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
