--- a/index.html
+++ b/index.html
@@ -1819,11 +1819,11 @@
                     <div class="footer-column">
                         <h3>روابط سريعة</h3>
                         <ul class="footer-links">
-                            <li><a href="#">الرئيسية</a></li>
+                            <li><a href="index.html">الرئيسية</a></li>
                             <li><a href="https://mostagb-al-store.vercel.app/ad.html">إدارة المنتجات</a></li>
                             <li><a href="#">عروض خاصة</a></li>
                             <li><a href="#">الجديد</a></li>
-                            <li><a href="#">اتصل بنا</a></li>
+                            <li><a href="contact.html">اتصل بنا</a></li>
                         </ul>
                     </div>
                     
