--- a/index.html
+++ b/index.html
@@ -1911,7 +1911,7 @@
             
             <div class="filters">
                 <button class="filter-btn active" data-category="all">الكل</button>
-                <button class="filter-btn" data-category="سيارات">سيارات</button>
+                <button class="filter-btn" data-category="لابتوبات">لابتوبات</button>
                 <button class="filter-btn" data-category="بدل">بدل</button>
                 <button class="filter-btn" data-category="فساتين">فساتين</button>
                 <button class="filter-btn" data-category="طرح">طرح</button>
