Update Supabase URL and anon key in index.html

--- a/index.html
+++ b/index.html
@@ -2053,8 +2053,8 @@
 
     <script>
         // 🔧 إعدادات Supabase
-        const SUPABASE_URL = 'https://nvwabjwlzzelzkizblss.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52d2FiandsenplbHpraXpibHNzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAzNDU1NDQsImV4cCI6MjA3NTkyMTU0NH0.AI9-rockiprdgbImyOoQCQ2p4wmI3MTJ6Fa-AX5_Nno';
+        const SUPABASE_URL = 'https://fpwdxewmrpxbrutlslul.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZwd2R4ZXdtcnB4YnJ1dGxzbHVsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NzAxODEsImV4cCI6MjA4NjE0NjE4MX0.d-64b-dJOdJGumfedJjnwU0zy0YYaJbenLvnq7vKDc4';
 
         // تهيئة Supabase
         let supabase;
