Change product rating color to gold

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         }
 
         .product-rating i {
-            color: var(--secondary);
+            color: #FFD700;
         }
 
         .product-colors {
