Update CACHE_DURATION to 72 hours
Increased cache duration from 1 hour to 3 days.

--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@
         let hasMore = true;           // هل هناك المزيد من المنتجات في Firestore؟
 
         // مدة صلاحية الكاش (بالمللي ثانية) - ساعة واحدة
-        const CACHE_DURATION = 60 * 60 * 1000; // 3600000 ms
+        const CACHE_DURATION = 72 * 60 * 60 * 1000; // 3600000 ms
 
         // عناصر DOM
         const loadingScreen = document.getElementById('loadingScreen');
