Reduce cache duration from 72 hours to 1 hour

--- a/index.html
+++ b/index.html
@@ -1454,7 +1454,7 @@
         let hasMore = true;
 
         // مدة صلاحية الكاش - 72 ساعة
-        const CACHE_DURATION = 72 * 60 * 60 * 1000; // 259,200,000 ms
+        const CACHE_DURATION = 60 * 60 * 1000; // 259,200,000 ms
         // حد التحميل الخلفي (قبل ساعتين من انتهاء الصلاحية)
         const REFRESH_THRESHOLD = 70 * 60 * 60 * 1000; // 252,000,000 ms
 
