--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
                         <div class="absolute -top-6 -right-6 w-24 h-24 bg-secondary/20 rounded-full animate-pulse"></div>
                         <div class="absolute -bottom-6 -left-6 w-32 h-32 bg-primary/10 rounded-full animate-pulse" style="animation-delay:1s;"></div>
                         <div class="relative rounded-3xl overflow-hidden shadow-2xl hover-lift">
-                            <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="تسوق" class="w-full h-[500px] object-cover product-image">
+                            <img src="https://res.cloudinary.com/dim7huhc3/image/upload/v1772452486/9f158515356c6d9d18ff3150da0c0b01_iuwi4l.jpg" alt="تسوق" class="w-full h-[500px] object-cover product-image">
                         </div>
                     </div>
                 </div>
